@@ -1,5 +1,10 @@
 2005-01-03  Jonathan Pryor  <jonpryor@vt.edu>
 
+	* mph.h, x-struct-str.c: Add "const" to parameters to remove 
+	  "warning: passing arg [2|4]...discards qualifiers" message.
+
+2005-01-03  Jonathan Pryor  <jonpryor@vt.edu>
+
 	* fstab.c: Remove some sparc compiler warnings.
 
 2005-01-03  Jonathan Pryor  <jonpryor@vt.edu>
